# CategorisezAutomatiquementDesQuestions

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  test.ipynb
example/: README.md  example1.txt  example2.txt  example3.txt  example4.txt  example5.txt
notebooks/: exploration.ipynb  test.ipynb
src/: tsne.py
src/back/: backend.py
src/dataset/: dataset.py
src/front/: .gitignore  bert.py  small.py  ui.py
src/models/: callback.py  lda.py  metrics.py  trainer.py
src/run/: bert.py  sklearn1.py  sklearn2.py  sklearnFinal.py
src/run/multi/: README.md  sklearn1.py
src/run/multi/BERT/: MultiLabelBert.py  bert.py
src/run/multi/BERT/configs/: base-lr-45-fn.yaml  base-peft-low.yaml  base-test.yaml  large-test.yaml
src/run/multi/BERT/configs/tested/: base-lr-41-fn.yaml  base-lr35-fn-all-loss.yaml  base-lr35-fn-all.yaml  base-lr35-fn-peft.yaml  base-lr35-fn.yaml  base-lr35-fn25-all.yaml  base-lr35-mf21.yaml  base-lr35-mf35.yaml
src/run/multi/USE/: use.py
