[tool.poetry]
name = "oc"
version = "0.1.0"
description = ""
authors = ["Alan Blanchet <alan@alan-blanchet.fr>"]
readme = "README.md"
repository = "https://github.com/AlanBlanchet/SegmentezDesClientsDunSiteECommerce"
packages = [{ include = "src/" }]


[tool.poetry.dependencies]
python = "~3.10"
bs4 = "^0.0.1"
ipywidgets = "^8.0.6"
regex = "^2023.6.3"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
nltk = "^3.8.1"
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp310-cp310-linux_x86_64.whl" }
# Rapids manual installation
# -------------------------------------------------------------------
cuml-cu11 = { url = "https://pypi.nvidia.com/cuml-cu11/cuml_cu11-23.4.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl" }
cudf-cu11 = { url = "https://pypi.nvidia.com/cudf-cu11/cudf_cu11-23.4.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl" }
dask-cudf-cu11 = { url = "https://pypi.nvidia.com/dask-cudf-cu11/dask_cudf_cu11-23.4.1-py3-none-any.whl" }
raft-dask-cu11 = { url = "https://pypi.nvidia.com/raft-dask-cu11/raft_dask_cu11-23.4.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl" }
cubinlinker-cu11 = { url = "https://pypi.nvidia.com/cubinlinker-cu11/cubinlinker_cu11-0.3.0.post1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl" }
ptxcompiler-cu11 = { url = "https://pypi.nvidia.com/ptxcompiler-cu11/ptxcompiler_cu11-0.7.0.post1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl" }
rmm-cu11 = { url = "https://pypi.nvidia.com/rmm-cu11/rmm_cu11-23.4.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl" }
pylibraft-cu11 = { url = "https://pypi.nvidia.com/pylibraft-cu11/pylibraft_cu11-23.4.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl" }
ucx-py-cu11 = { url = "https://pypi.nvidia.com/ucx-py-cu11/ucx_py_cu11-0.31.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl" }
python-utils = "^3.7.0"
# -------------------------------------------------------------------
tsne-torch = { git = "https://github.com/AlanBlanchet/tsne-pytorch" }
gensim = "^4.3.1"
transformers = {extras = ["torch"], version = "^4.31.0"}
pytorch-lightning = "^2.0.5"
# pyLDAvis didn't match with pandas version < 2
pyldavis = { git = "https://github.com/AlanBlanchet/pyLDAvis.git" }
datasets = "^2.14.1"
evaluate = "^0.4.0"
ipykernel = "^6.25.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
